[gd_scene load_steps=47 format=2]

[ext_resource path="res://boss.gd" type="Script" id=1]
[ext_resource path="res://Assets/Charsets/roboboss1.png" type="Texture" id=2]
[ext_resource path="res://Assets/Charsets/roboboss2.png" type="Texture" id=3]
[ext_resource path="res://Assets/Charsets/roboboss3.png" type="Texture" id=4]
[ext_resource path="res://Assets/Charsets/guitar_damage1.png" type="Texture" id=5]
[ext_resource path="res://Assets/Charsets/guitar_damage2.png" type="Texture" id=6]
[ext_resource path="res://Assets/Charsets/guitar_damage3.png" type="Texture" id=7]
[ext_resource path="res://Assets/Charsets/roboboss4.png" type="Texture" id=8]
[ext_resource path="res://Assets/Charsets/roboboss5.png" type="Texture" id=9]
[ext_resource path="res://Assets/Charsets/roboboss6.png" type="Texture" id=10]
[ext_resource path="res://Assets/Charsets/roboboss7.png" type="Texture" id=11]
[ext_resource path="res://Assets/Charsets/roboboss8.png" type="Texture" id=12]
[ext_resource path="res://Assets/Charsets/roboboss_9.png" type="Texture" id=13]
[ext_resource path="res://Assets/Charsets/roboboss_10.png" type="Texture" id=14]
[ext_resource path="res://Assets/Charsets/roboboss_11.png" type="Texture" id=15]
[ext_resource path="res://Assets/Charsets/guitar_destroyed1.png" type="Texture" id=16]
[ext_resource path="res://Assets/Charsets/guitar_destroyed2.png" type="Texture" id=17]
[ext_resource path="res://Assets/Charsets/guitar_destroyed3.png" type="Texture" id=18]
[ext_resource path="res://Assets/Charsets/roboboss_shock1.png" type="Texture" id=19]
[ext_resource path="res://Assets/Charsets/roboboss_shock2.png" type="Texture" id=20]
[ext_resource path="res://Assets/Charsets/roboboss_shock3.png" type="Texture" id=21]
[ext_resource path="res://Assets/Charsets/roboboss_turret.png" type="Texture" id=22]
[ext_resource path="res://boss_turret.gd" type="Script" id=23]
[ext_resource path="res://Assets/GUI/boss_hpbar2.png" type="Texture" id=24]
[ext_resource path="res://Assets/Animations/light.png" type="Texture" id=25]
[ext_resource path="res://boss_electricity.gd" type="Script" id=26]
[ext_resource path="res://Assets/Objects/guitarfragment.png" type="Texture" id=27]
[ext_resource path="res://Assets/SFX/robot_1.wav" type="AudioStream" id=28]
[ext_resource path="res://Assets/SFX/explosion_big.wav" type="AudioStream" id=29]
[ext_resource path="res://Assets/SFX/explosion_2.wav" type="AudioStream" id=30]
[ext_resource path="res://Assets/SFX/charge_up.wav" type="AudioStream" id=31]
[ext_resource path="res://Assets/SFX/electricity_2_loop.wav" type="AudioStream" id=32]
[ext_resource path="res://Assets/SFX/magic_swing.wav" type="AudioStream" id=33]
[ext_resource path="res://Assets/SFX/power_up.wav" type="AudioStream" id=34]
[ext_resource path="res://Assets/SFX/flame.wav" type="AudioStream" id=35]
[ext_resource path="res://Assets/SFX/zap_1.wav" type="AudioStream" id=36]
[ext_resource path="res://Assets/SFX/alarm2.wav" type="AudioStream" id=37]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "normal",
"speed": 2.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "dying",
"speed": 0.01
}, {
"frames": [ ExtResource( 4 ) ],
"loop": false,
"name": "shaker_attack",
"speed": 1.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 6 ) ],
"loop": true,
"name": "damage1",
"speed": 1.5
}, {
"frames": [ ExtResource( 2 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ) ],
"loop": false,
"name": "turret_pose",
"speed": 6.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "turret_attack",
"speed": 1.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 15 ), ExtResource( 15 ) ],
"loop": false,
"name": "electric_pose",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 17 ) ],
"loop": true,
"name": "destroyed1",
"speed": 1.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ) ],
"loop": true,
"name": "electric_attack",
"speed": 15.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "shaker_pose",
"speed": 8.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "charger",
"speed": 1.0
} ]

[sub_resource type="Animation" id=2]
resource_name = "hit"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 10, 10, 10, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "shot"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.5, 1.5 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.3, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="CircleShape2D" id=4]
radius = 21.3388

[sub_resource type="Animation" id=5]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.11
tracks/0/type = "value"
tracks/0/path = NodePath("guitar:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.01, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 10, 10, 10, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("guitar:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 360.0, 1080.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("collision:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 360.0, 1080.0 ]
}

[sub_resource type="ParticlesMaterial" id=9]
emission_shape = 1
emission_sphere_radius = 14.13
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 500, 0 )
initial_velocity = 777.77
initial_velocity_random = 0.99
angular_velocity = 209.23
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 61.5
angle_random = 1.0
scale_random = 1.0

[node name="boss" type="Area2D"]
scale = Vector2( 1.5, 1.5 )
script = ExtResource( 1 )

[node name="guitar" type="AnimatedSprite" parent="."]
rotation = 18.8496
frames = SubResource( 1 )
animation = "charger"
playing = true

[node name="hit" type="AnimationPlayer" parent="guitar"]
anims/hit = SubResource( 2 )

[node name="turret" type="Sprite" parent="guitar"]
visible = false
position = Vector2( 0, 17 )
texture = ExtResource( 22 )
script = ExtResource( 23 )

[node name="anim" type="AnimationPlayer" parent="guitar/turret"]
anims/shot = SubResource( 3 )

[node name="laser" type="Sprite" parent="guitar/turret"]
modulate = Color( 1, 0, 0, 1 )
show_behind_parent = true
position = Vector2( 64, 0 )
scale = Vector2( 1, 0.1 )
z_index = -4
texture = ExtResource( 24 )

[node name="electricity" type="Light2D" parent="guitar"]
visible = false
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 25 )
color = Color( 0.772549, 0.996078, 1, 1 )
script = ExtResource( 26 )

[node name="collision" type="CollisionShape2D" parent="."]
rotation = 18.8496
shape = SubResource( 4 )

[node name="anim" type="AnimationPlayer" parent="."]
anims/fadein = SubResource( 5 )
anims/fadeout = SubResource( 6 )
anims/hit = SubResource( 7 )
anims/windup = SubResource( 8 )

[node name="pattern_change" type="Timer" parent="."]
wait_time = 11.0
autostart = true

[node name="windup_timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="windup_timer_faster" type="Timer" parent="."]
one_shot = true

[node name="explosions" type="Timer" parent="."]
wait_time = 0.2

[node name="light" type="Sprite" parent="."]
scale = Vector2( 1e-005, 1e-005 )
texture = ExtResource( 25 )

[node name="damage" type="Particles2D" parent="."]
show_behind_parent = true
position = Vector2( 8.30203, 6.98084 )
scale = Vector2( 0.5, 0.5 )
emitting = false
amount = 12
one_shot = true
explosiveness = 1.0
randomness = 1.0
process_material = SubResource( 9 )
texture = ExtResource( 27 )

[node name="explo" type="Particles2D" parent="."]
show_behind_parent = true
position = Vector2( 8.30203, 6.98084 )
scale = Vector2( 0.5, 0.25 )
emitting = false
amount = 50
lifetime = 3.0
one_shot = true
speed_scale = 0.5
explosiveness = 1.0
randomness = 1.0
process_material = SubResource( 9 )
texture = ExtResource( 27 )

[node name="Timer" type="Timer" parent="explo"]
wait_time = 3.0
one_shot = true

[node name="damage_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 28 )
volume_db = 6.0

[node name="explosion_final" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 29 )

[node name="explosion" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 30 )
volume_db = 6.0
pitch_scale = 1.1

[node name="hp_charge_up" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 31 )
volume_db = -8.0

[node name="electricity" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 32 )
pitch_scale = 0.76

[node name="pylons" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 33 )
volume_db = -8.0
pitch_scale = 0.8

[node name="charge_power_up" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 34 )
volume_db = -12.0
pitch_scale = 0.5

[node name="charge_attack" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 35 )
volume_db = -6.0
pitch_scale = 1.2

[node name="robot_damage" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 28 )

[node name="shock" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 36 )
pitch_scale = 0.6

[node name="light2" type="Light2D" parent="."]
texture = ExtResource( 25 )
energy = 0.6

[node name="aim" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 37 )
volume_db = -3.0

[connection signal="timeout" from="pattern_change" to="." method="_on_pattern_change_timeout"]
[connection signal="timeout" from="windup_timer" to="." method="_on_windup_timer_timeout"]
[connection signal="timeout" from="windup_timer_faster" to="." method="_on_windup_timer_timeout"]
[connection signal="timeout" from="explosions" to="." method="_on_explosions_timeout"]
